Fix: Expanded rule list height bug
Removed the `max-height` from the expanded `ul`, which was causing
the overlap.

- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -

Fix #317
Close #319

--- a/src/hexo/themes/sonarwhal/source/components/treeview/treeview.css
+++ b/src/hexo/themes/sonarwhal/source/components/treeview/treeview.css
@@ -20,7 +20,6 @@
 }
 
 .treeview li[aria-expanded="true"] > ul {
-    max-height: 120rem;
     -webkit-transition: max-height .2s ease-in-out;
     -moz-transition: max-height .2s ease-in-out;
     -o-transition: max-height .2s ease-in-out;
